deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy
  labels:
    app: nginx
spec:
  replicas: 15
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: test
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: aduam/nginx-k8s:v1
