service-account-dns.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns-k8s-alan
spec:
  selector:
    matchLabels:
      app: external-dns-k8s-alan
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns-k8s-alan
    spec:
      serviceAccountName: external-dns-k8s-alan
      containers:
      - name: external-dns-k8s-alan
        image: bitnami/external-dns:0.7.1
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=training.trambo.cloud # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
        - --provider=aws
        - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
        - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
        - --registry=txt
        - --txt-owner-id=my-identifier
        - --log-level=debug
