hpa-service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-hpa
spec:
  selector:
    app: hpa
  ports:
    - protocol: TCP
      port: 80
